# FrankenUSBT

./: .gitignore  README.md
components/ble_hid/: CMakeLists.txt
components/hid/: hid_host.c
main/: Kconfig.projbuild  hid_host_example.c  idf_component.yml
